# PrintEasy

./: .gitignore  1.js  2.js  Cargo.toml  package.json
formvalidation/: index.html  payment.html  style.css
src/: lib.rs  main.rs
