[package]
name = "printeasy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.15", features = ["multipart", "ws"] }
dashmap = "5.4.0"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs"] }
url = "2.3.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
